fix: check seats on update booking and spelling error on activity type expander